--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 **/.DS_Store
 **/._.DS_Store
 
-application.properties
-application.yml
+src/main/resources/application.properties
+src/main/resources/application.yml
 
 HELP.md
 !**/.DS_Store/**
