--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 **/.DS_Store
 **/._.DS_Store
 
-src/main/resources/application.properties
-src/main/resources/application.yml
+**/resources/application.properties
+**/resources/application.yml
 
 HELP.md
 !**/.DS_Store/**
