FEAT : 상비약 데이터 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 
 **/resources/application.properties
 **/resources/application.yml
+**/resources/static/images
+**/resources/MedicineAPI.json
+**/resources/MedicineCategoryAPI.json
 
 HELP.md
 !**/.DS_Store/**
